--- a/blogger/app/views/articles/index.html.erb
+++ b/blogger/app/views/articles/index.html.erb
@@ -5,7 +5,10 @@
 		<li>
 				<%= link_to article.title, article_path(article), 
 				:class => 'article_title', :id => "article_#{article.id}" %>
+				<p>Tags: <%= tag_links(article.tags) %></p>
 		</li>
+		<br />
 		<% end %>
 </ul>
+
 <%= link_to "New Article", new_article_path, :class => "new_article" %>
