--- a/blogger/app/views/articles/show.html.erb
+++ b/blogger/app/views/articles/show.html.erb
@@ -10,5 +10,7 @@
 <%= render :partial => 'comment', :collection => @article.comments %>
 <%= render :partial => 'comment_form' %>
 <%= link_to "<< Back to Articles List", articles_path %>
-<%= link_to "edit", edit_article_path(@article) %>
-<%= link_to "delete", article_path(@article), :method => :delete %>
+<% if logged_in? %>
+	<%= link_to "edit", edit_article_path(@article) %>
+	<%= link_to "delete", article_path(@article), :method => :delete %>
+<% end %>
