--- a/blogger/app/assets/stylesheets/styles.css.scss
+++ b/blogger/app/assets/stylesheets/styles.css.scss
@@ -22,7 +22,7 @@ a {
 }
 
 #container {
-  width: 75%;
+  width: 55%;
   margin: 0 auto;
   background: #fff;
   padding: 20px 40px;
@@ -33,4 +33,8 @@ a {
 #content {
   clear: both;
   padding-top: 20px;
+}
+#sidebar_nav {
+  width: 20%;
+  border: solid 2px red;
 }
