--- a/blogger/app/assets/stylesheets/styles.css.scss
+++ b/blogger/app/assets/stylesheets/styles.css.scss
@@ -20,14 +20,18 @@ a {
   height: 0;
   overflow: hidden;
 }
+#navigation {
+  background: #fff;
+  border: solid 2px red;
+}
 
 #container {
-  width: 75%;
+  width: 85%;
   margin: 0 auto;
   background: #fff;
   padding: 20px 40px;
   border: solid 1px black;
-  margin-top: 20px;
+  margin-top: 45px;
 }
 
 #content {
