--- a/blogger/app/views/layouts/application.html.haml
+++ b/blogger/app/views/layouts/application.html.haml
@@ -1,12 +1,15 @@
 !!!
 %html
   %head
-    %title Blogger
+    %title Anis' Rails Blogger
     = stylesheet_link_tag    "application", :media => "all"
     = javascript_include_tag "application"
     = csrf_meta_tags
   %body
     #container
+      #navigation
+        %h1 Booyah
+        = build_navigation
       #content
         = yield
         %hr
