--- a/blogger/app/assets/stylesheets/scaffolds.css.scss
+++ b/blogger/app/assets/stylesheets/scaffolds.css.scss
@@ -1,11 +1,6 @@
-@import "compass";
-@import "susy";
-
 body {
-  @include container;
-
-  background-color: #333333;
-  color: #666;
+  background-color: #fff;
+  color: #333;
   font-family: verdana, arial, helvetica, sans-serif;
   font-size: 13px;
   line-height: 18px;
@@ -24,10 +19,13 @@ pre {
 }
 
 a {
-  color: #5A56D6;
-  text-decoration: none;
+  color: #000;
   &:visited {
-    color: #7D7ADE;
+    color: #666;
+  }
+  &:hover {
+    color: #fff;
+    background-color: #000;
   }
 }
 
@@ -47,85 +45,25 @@ div {
   display: table;
 }
 
-#header {
-  @include span-columns(12,12);
-  border: solid 2px red;
-  background-color: #C4BDF2;
-  margin-top: -20px;
-  padding-top: 35px;
-  position: relative;
-  z-index: 999;
-
-  #user_bar {
-
-    #login_status {
-      color: white;
-      font-size: 1.5em;
-      padding-left: 15px;
-      vertical-align: middle;
-    }
+#error_explanation {
+  width: 450px;
+  border: 2px solid red;
+  padding: 7px;
+  padding-bottom: 0;
+  margin-bottom: 20px;
+  background-color: #f0f0f0;
+  h2 {
+    text-align: left;
+    font-weight: bold;
+    padding: 5px 5px 5px 15px;
+    font-size: 12px;
+    margin: -7px;
+    margin-bottom: 0px;
+    background-color: #c00;
+    color: #fff;
   }
-
-}
-
-#flash-area {
-  @include span-columns(12,12);
-
-  background: #FBFFD1;
-  color: #D16D78;
-  font-size: 1.2em;
-  font-weight: bold;
-  margin: -15px 0px 10px 0px;
-  padding: 20px 0px 5px 0px;
-  position: relative;
-  text-align: center;
-  z-index: 1;
-}
-
-#side_navigation {
-  @include span-columns(3,12);
-  border: solid 2px green;
-  
-  ul#side-menu {
-    list-style-type: none;
-    padding-left: 0px;
-    
-    li {
-      background: #FFF;
-      padding: 2px;
-      margin-bottom: 10px;
-      text-align: center; 
-      
-      a {
-        text-decoration: none;
-        display: block;
-      }
-      
-      &:hover {
-        border-bottom: 10px solid #C4BDF2;
-      }
-    }
+  ul li {
+    font-size: 12px;
+    list-style: square;
   }
-}
-
-#content {
-  @include span-columns(9 omega, 12);
-  border: solid 2px blue;
-}
-
-input[type=password], input[type=text], textarea {
-  background-color:#FFF;
-  border:1px solid #dbdbdb;
-  padding:5px;
-  color: #000;
-  &:focus {
-    outline: none;
-  }
-}
-
-hr {
-  background-color: #AAA;
-  border: 0px;
-  height: 1px;
-  margin-top: 20px;
 }
