--- a/blogger/app/views/layouts/application.html.haml
+++ b/blogger/app/views/layouts/application.html.haml
@@ -7,6 +7,8 @@
     = csrf_meta_tags
   %body
     #container
+      #navigation
+        = build_navigation
       #content
         = yield
         %hr
