Adding my own gem to it

--- a/blogger/app/views/articles/show.html.erb
+++ b/blogger/app/views/articles/show.html.erb
@@ -5,7 +5,7 @@
 		<p><%= image_tag @article.image.url %></p>
 	<% end %>
 </p>
-<div class="viewCount">Views: <%= @viewCount %></div>
+<div class="viewCount" style="background-color: #<%= @random_color %> !important">Views: <%= @viewCount %></div>
 <p><%= @article.body %></p>
 <h3>Comments (<%= @article.comments.count %>)</h3>
 <%= render :partial => 'comment', :collection => @article.comments %>
