--- a/blogger/app/views/layouts/application.html.haml
+++ b/blogger/app/views/layouts/application.html.haml
@@ -1,5 +1,5 @@
 !!!
-%html
+%html{:style => "background-color: ##{@random_color} !important"}
   %head
     %title Blogger
     = stylesheet_link_tag    "application", :media => "all"
